@@ -1,5 +1,5 @@
 <?php
-// $Id: theme.inc,v 1.73.2.42 2011-01-18 21:19:51 merlinofchaos Exp $
+// $Id: theme.inc,v 1.73.2.43 2011-01-20 20:07:08 merlinofchaos Exp $
 
 /**
  * @file theme.inc
@@ -505,7 +505,7 @@ function template_preprocess_views_view_table(&$vars) {
     drupal_add_js('misc/tableheader.js');
     $vars['class'] .= " sticky-enabled";
   }
-  $vars['class'] .= ' cols-'. count($vars['rows']);
+  $vars['class'] .= ' cols-' . count($vars['header']);
 
   $vars['attributes'] = '';
   if (!empty($handler->options['summary'])) {
@@ -610,6 +610,7 @@ function template_preprocess_views_view_grid(&$vars) {
     }
   }
   $vars['rows'] = $rows;
+  $vars['class'] = 'views-view-grid col-' . $columns;
   $vars['attributes'] = '';
   if (!empty($handler->options['summary'])) {
     $vars['attributes'] = drupal_attributes(array('summary' => $handler->options['summary']));
